# frisenbrief-bot

./: pyproject.toml
.github/workflows/: docker-publish.yml
frisenbriefbot/: __main__.py  attachmentconvert.py  mailprocess.py  messagefetch.py
